[tool.poetry]
name = "geopopcount"
version = "0.1.0"
description = ""
authors = ["askeladdk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
args = "0.1.0"
click = "7.1.2"
clint = "0.5.1"
flask = "1.1.2"
georaptor = "2.0.3"
itsdangerous = "1.1.0"
jinja2 = "2.11.2"
markupsafe = "1.1.1"
pygeohash = "1.2.0"
pygtrie = "2.4.2"
python-dotenv = "0.15.0"
werkzeug = "1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
