[tool.poetry]
name = "geopopcount"
version = "0.1.0"
description = ""
authors = ["askeladdk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
args = "^0.1.0"
click = "^8.1.3"
clint = "^0.5.1"
flask = "^2.2.3"
georaptor = "^2.0.3"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
markupsafe = "^2.1.2"
pygeohash = "^1.2.0"
pygtrie = "^2.5.0"
python-dotenv = "^1.0.0"
werkzeug = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
